; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_latch.c_sendSelfPipeByte.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_latch.c_sendSelfPipeByte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@selfpipe_writefd = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8
@EAGAIN = common dso_local global i64 0, align 8
@EWOULDBLOCK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sendSelfPipeByte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sendSelfPipeByte() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8, align 1
  store i8 0, i8* %2, align 1
  br label %3

3:                                                ; preds = %12, %0
  %4 = load i32, i32* @selfpipe_writefd, align 4
  %5 = call i32 @write(i32 %4, i8* %2, i32 1)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* %1, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %8, label %23

8:                                                ; preds = %3
  %9 = load i64, i64* @errno, align 8
  %10 = load i64, i64* @EINTR, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  br label %3

13:                                               ; preds = %8
  %14 = load i64, i64* @errno, align 8
  %15 = load i64, i64* @EAGAIN, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %21, label %17

17:                                               ; preds = %13
  %18 = load i64, i64* @errno, align 8
  %19 = load i64, i64* @EWOULDBLOCK, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %17, %13
  br label %23

22:                                               ; preds = %17
  br label %23

23:                                               ; preds = %21, %22, %3
  ret void
}

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
